--- a/index.mdx
+++ b/index.mdx
@@ -1,97 +1,34 @@
 ---
-title: "Introduction"
-description: "Welcome to the new home for your documentation"
+title: IT Security Policy
+description: CARA Com My Sdn Bhd's guide to keeping our systems, data, and team secure
+sidebarTitle: Welcome
 ---
 
-## Setting up
+## CARA Com My Sdn Bhd
 
-Get your documentation site up and running in minutes.
+**18-06-02, Block 18, Corporate Park Star Central, Lingkaran Cyber Point Timur, Cyber 12, Cyberjaya, Selangor, Malaysia 63000**
 
-<Card
-  title="Start here"
-  icon="rocket"
-  href="/quickstart"
-  horizontal
->
-  Follow our three step quickstart guide.
-</Card>
+Welcome to the IT Security Policy for CARA Com My Sdn Bhd! We're passionate about building innovative IT solutions, and keeping our systems secure is a big part of that. This policy is your friendly guide to protecting our data, devices, and network—whether you're using a company laptop or your own device. It’s designed to be clear, approachable, and aligned with trusted standards like NIST, ISO 27001, and CIS Controls. Let’s work together to keep security simple and effective!
 
-## Make it yours
+<Note>
+  💡 **Why This Matters**: This policy ensures we all follow best practices to
+  safeguard our work, customers, and reputation. Questions? Reach out to IT
+  Security at [itsecurity@cara.com.my](mailto:itsecurity@cara.com.my).
+</Note>
 
-Design a docs site that looks great and empowers your users.
+## What’s in This Policy?
 
-<Columns cols={2}>
-  <Card
-    title="Edit locally"
-    icon="pen-to-square"
-    href="/development"
-  >
-    Edit your docs locally and preview them in real time.
-  </Card>
-  <Card
-    title="Customize your site"
-    icon="palette"
-    href="/essentials/settings"
-  >
-    Customize the design and colors of your site to match your brand.
-  </Card>
-    <Card
-    title="Set up navigation"
-    icon="map"
-    href="/essentials/navigation"
-  >
-    Organize your docs to help users find what they need and succeed with your product.
-  </Card>
-  <Card
-    title="API documentation"
-    icon="terminal"
-    href="/api-reference/introduction"
-  >
-    Auto-generate API documentation from OpenAPI specifications.
-  </Card>
-</Columns>
+This document covers everything you need to know to keep our systems secure, from passwords to code reviews. It’s written in MDX, hosted on Mintlify, and integrates with our GitHub workflow for easy updates. Here’s what you’ll find:
 
-## Create beautiful pages
-
-Everything you need to create world-class documentation.
-
-<Columns cols={2}>
-  <Card
-    title="Write with MDX"
-    icon="pen-fancy"
-    href="/essentials/markdown"
-  >
-    Use MDX to style your docs pages.
-  </Card>
-  <Card
-    title="Code samples"
-    icon="code"
-    href="/essentials/code"
-  >
-    Add sample code to demonstrate how to use your product.
-  </Card>
-  <Card
-    title="Images"
-    icon="image"
-    href="/essentials/images"
-  >
-    Display images and other media.
-  </Card>
-  <Card
-    title="Reusable snippets"
-    icon="recycle"
-    href="/essentials/reusable-snippets"
-  >
-    Write once and reuse across your docs.
-  </Card>
-</Columns>
-
-## Need inspiration?
-
-<Card
-  title="See complete examples"
-  icon="stars"
-  href="https://mintlify.com/customers"
->
-  Browse our showcase of exceptional documentation sites.
-</Card>
+- **Server & System Hardening**: How we keep our servers updated and secure.
+- **Employee Responsibilities**: Your role in spotting and reporting threats.
+- **Data Handling & Classification**: Protecting sensitive vs. general data.
+- **Access Control**: Ensuring only the right people access the right systems.
+- **Monitoring & Logging**: How we detect and prevent incidents.
+- **Backup & Recovery**: Keeping our data safe and recoverable.
+- **Incident Response**: What to do if something goes wrong.
+- **Development & Git Practices**: Secure coding with standard Git strategies and reviews.
+- **Network Security**: DMZ, VM rules, and restrictions on unauthorized tools like VPNs.
+- **Remote Work Security**: Safe practices for working from home.
+- **Software Installation**: Getting approval for new tools.
+- **Encryption Standards**: Protecting data with AES-256 and TLS.
