feat: add developement policy

--- a/index.mdx
+++ b/index.mdx
@@ -20,15 +20,26 @@ Welcome to the IT Security Policy for CARA Com My Sdn Bhd! We're passionate abou
 
 This document covers everything you need to know to keep our systems secure, from passwords to code reviews. It’s written in MDX, hosted on Mintlify, and integrates with our GitHub workflow for easy updates. Here’s what you’ll find:
 
-- **Server & System Hardening**: How we keep our servers updated and secure.
-- **Employee Responsibilities**: Your role in spotting and reporting threats.
-- **Data Handling & Classification**: Protecting sensitive vs. general data.
-- **Access Control**: Ensuring only the right people access the right systems.
-- **Monitoring & Logging**: How we detect and prevent incidents.
-- **Backup & Recovery**: Keeping our data safe and recoverable.
-- **Incident Response**: What to do if something goes wrong.
-- **Development & Git Practices**: Secure coding with standard Git strategies and reviews.
-- **Network Security**: DMZ, VM rules, and restrictions on unauthorized tools like VPNs.
-- **Remote Work Security**: Safe practices for working from home.
-- **Software Installation**: Getting approval for new tools.
-- **Encryption Standards**: Protecting data with AES-256 and TLS.
+<CardGroup>
+  <Card title="Scope" href="/scope">
+    Our commitment to security and who this policy applies to.
+  </Card>
+  <Card title="Authentication & Access" href="/auth_n_access">
+    Guidelines for secure access to our systems and data.
+  </Card>
+  <Card title="Acceptable Use" href="/acceptable_use">
+    Proper use of company assets and network resources.
+  </Card>
+  <Card title="Data Handling" href="/data_handling">
+    How we classify, handle, and protect our data.
+  </Card>
+  <Card title="Access Control" href="/access_control">
+    Ensuring only the right people have access to the right information.
+  </Card>
+  <Card title="Network Security" href="/network_security">
+    Securing our network infrastructure from threats.
+  </Card>
+  <Card title="Development Security" href="/dev_security">
+    Integrating security into our software development lifecycle.
+  </Card>
+</CardGroup>
