fat: new polict

--- a/incident_response.mdx
+++ b/incident_response.mdx
@@ -8,6 +8,10 @@ sidbarTitle: 'Incident Response'
 
 This policy outlines the procedures for responding to security incidents.
 
+<Note>
+  This policy applies to all personnel involved in the detection, analysis, and resolution of security incidents.
+</Note>
+
 ## Detection and Reporting
     - Implement tools and processes to detect security incidents.
     - Establish clear procedures for reporting suspected incidents.
